test/fail/missing-semi.mo
func fo(){};

fo()
fo();
fo();

func f(){ 
  fo();
  fo()
  fo()
};
